# decision-trees-demo

./: README.md  RandomForestsComparison.xlsx  pyproject.toml  requirements.txt
notebooks/: practice.ipynb  presentation.ipynb
