[tool.poetry]
package-mode = false
authors = ["Vitalii Morskyi <vitalii@morskyi.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
jupyterlab = "^4.3.2"
kagglehub = "^0.3.4"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
imbalanced-learn = "^0.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
